# api_olx

./: .gitignore  Dockerfile  Makefile  README.md  TODO  docker-compose.yml  pyproject.toml  requirements.txt
apps/: urls.py
apps/adverts/: admin.py  apps.py  models.py
apps/adverts/migrations/: 0001_initial.py  0002_initial.py  0002_parameter_paramvalue.py  0003_advertimage_advertparam_categoryparam_categoryvalue_and_more.py
apps/adverts/models/: __init__.py  adverts.py  category.py  regions.py
apps/shared/: models.py
apps/users/: models.py
apps/users/migrations/: 0001_initial.py
apps/users/models/: __init__.py  profiles.py  users.py
nginx/: nginx.conf
root/: settings.py  settings_dev.py  settings_prod.py  urls.py
